CSS: FlexBox Challenge

--- a/Modern_HTML_CSS_Traversy/CSS/Flexbox Layout Challenge/flexbox_challenge.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Flexbox Layout Challenge/flexbox_challenge.html
@@ -7,27 +7,38 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Flexbox Layout Challenge</h1>
-    <p>I want to test your Flexbox skills with a quick challenge. I want you to create the following layout using Flexbox:</p>
-    <section class="layout">
-        <div class="heading">
-            <h2>Flexbox Layout Challenge</h2>
-            <div class="menu-container">
-                <ul class="menu-item">
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Services</li>
-                    <li>Contact</li>
-                </ul>
-            </div>
-            <div class="main-container">
-                <div class="main-items">
-                    <p>
-                        
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
+    <header class="header">
+        <h1>Flexbox Layout Challenge</h1>
+    </header>
+    <nav>
+        <ul class="main-menu">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+    <main class="main">
+        <section class="layout">
+            <h2>Lorem, ipsum dolor.</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis magni, sed repudiandae laudantium, cupiditate dignissimos corrupti mollitia quis repellat ipsa laboriosam a officia alias totam et vel architecto quod iusto?
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore nihil reiciendis veritatis quae obcaecati libero neque, et fugit dicta qui repudiandae accusamus error eveniet ipsam cumque expedita asperiores ipsum ut sequi animi. Quidem minima dolorem commodi natus praesentium reiciendis voluptatem dicta, exercitationem cupiditate odio dolor temporibus, debitis amet magni excepturi provident! Porro nostrum non cum iste natus sit minima commodi expedita esse nemo doloremque, dolorem cupiditate quaerat amet inventore atque delectus eveniet temporibus corrupti excepturi repellat. Totam assumenda magni expedita dolorem. Voluptatibus vitae repudiandae voluptates nulla eum, quo repellat quibusdam suscipit rem, nostrum ab in quos voluptas eos iste! Animi.
+            </p>
+        </section>
+
+        <aside>
+            <h3>Recent Posts</h3>
+            <ul>
+                <li><a href="#">Post 1</a></li>
+                <li><a href="#">Post 2</a></li>
+                <li><a href="#">Post 3</a></li>
+                <li><a href="#">Post 4</a></li>
+                <li><a href="#">Post 5</a></li>
+            </ul>
+        </aside>
+    </main>
 </body>
 </html>
