--- a/Modern_HTML_CSS_Traversy/CSS/Pricing Card Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Pricing Card Project/index.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Pricing Grid v1</title>
 </head>
 <body>
@@ -19,10 +20,10 @@
                 <p class="main-text">Discover how to crate your first projects.</p>
                 <a href="#" class="btn">Get Started</a>
                 <ul>
-                    <li>1 User</li>
-                    <li>5 Projects</li>
-                    <li>10GB Storage</li>
-                    <li>Priority Support</li>
+                    <li><i class="fas fa-check"></i> 1 User</li>
+                    <li><i class="fas fa-check"></i>5 Projects</li>
+                    <li><i class="fas fa-check"></i>10GB Storage</li>
+                    <li><i class="fas fa-check"></i>Priority Support</li>
                 </ul>
             </div>
             <!-- Item 2 -->
@@ -33,10 +34,10 @@
                 <p class="main-text">Bring your designs to the next level and export them.</p>
                 <a href="#" class="btn">Get Started</a>
                 <ul>
-                    <li>5 User</li>
-                    <li>50 Projects</li>
-                    <li>100GB Storage</li>
-                    <li>Priority Support</li>
+                    <li><i class="fas fa-check"></i>5 User</li>
+                    <li><i class="fas fa-check"></i>50 Projects</li>
+                    <li><i class="fas fa-check"></i>100GB Storage</li>
+                    <li><i class="fas fa-check"></i>Priority Support</li>
                 </ul>
             </div>
             <!-- Item 3 -->
@@ -47,10 +48,10 @@
                 <p class="main-text">Enjoy limitless use with interactive export options.</p>
                 <a href="#" class="btn">Get Started</a>
                 <ul>
-                    <li>Unlimited Users</li>
-                    <li>Unlimited Projects</li>
-                    <li>Unlimited Storage</li>
-                    <li>Priority Support</li>
+                    <li><i class="fas fa-check"></i>Unlimited Users</li>
+                    <li><i class="fas fa-check"></i>Unlimited Projects</li>
+                    <li><i class="fas fa-check"></i>Unlimited Storage</li>
+                    <li><i class="fas fa-check"></i>Priority Support</li>
                 </ul>
             </div>
         </div>
