--- a/Modern_HTML_CSS_Traversy/CSS/Pricing Card Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Pricing Card Project/index.html
@@ -7,7 +7,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Pricing Grid v1</title>
+<link rel="stylesheet" href="style.css">
+    <title>Pricing Grid v2</title>
 </head>
 <body>
     <div class="container">
