--- a/Modern_HTML_CSS_Traversy/CSS/Pricing Card Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Pricing Card Project/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="pricing">
             <!-- Item 1 -->
-            <div class="card">
+            <div class="card card-free">
                 <h2>Free</h2>
                 <p class="price"><sup>$</sup>0</p>
                 <p class="price-info"><strong>Great for Starters</strong></p>
@@ -28,7 +28,7 @@
                 </ul>
             </div>
             <!-- Item 2 -->
-            <div class="card">
+            <div class="card card-pro">
                 <h2>Pro</h2>
                 <p class="price"><sup>$</sup>7<span>/mo</span></p>
                 <p class="price-info"><strong>For Planned Projects</strong></p>
@@ -42,7 +42,7 @@
                 </ul>
             </div>
             <!-- Item 3 -->
-            <div class="card">
+            <div class="card card-enterprise">
                 <h2>Enterprise</h2>
                 <p class="price"><sup>$</sup>12<span>/mo</span></p>
                 <p class="price-info"><strong>For Professional Use</strong></p>
