Responsive - Flexible Layouts and Percentages

--- a/Modern_HTML_CSS_Traversy/CSS/Responsive/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Responsive/index.html
@@ -9,6 +9,11 @@
     <title>Responsive</title>
 </head>
 <body>
-    <h1>HTML & CSS: Responsive - Flexible Layouts and Percentages </h1>
+    <div class="container">
+        <h1>Lorem, ipsum dolor,</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, consequuntur id! Natus et incidunt laboriosam ipsa vel eligendi recusandae quidem, quo optio reiciendis? Rem accusantium voluptatum, numquam fugit cum ipsa.
+        Ullam nam praesentium modi eius. Quidem, dolor quo iure voluptates error fugiat, aperiam expedita voluptas alias vel hic. Sint fugit rem totam repellat incidunt odio voluptates iure nam perferendis commodi?
+        </p>
+    </div>
 </body>
 </html>
