Responsive - Flexible Layouts and Percentages

--- a/Modern_HTML_CSS_Traversy/CSS/Responsive/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Responsive/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="container">
         <h1>Lorem, ipsum dolor,</h1>
+        <img src="https:picsum.photos/1100/300" alt="">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis, consequuntur id! Natus et incidunt laboriosam ipsa vel eligendi recusandae quidem, quo optio reiciendis? Rem accusantium voluptatum, numquam fugit cum ipsa.
         Ullam nam praesentium modi eius. Quidem, dolor quo iure voluptates error fugiat, aperiam expedita voluptas alias vel hic. Sint fugit rem totam repellat incidunt odio voluptates iure nam perferendis commodi?
         </p>
