Reponsive: Media Queries

--- a/Modern_HTML_CSS_Traversy/CSS/media_queries/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/media_queries/index.html
@@ -12,6 +12,6 @@
     <div class="tablet"><h1>Tablet</h1></div>
     <div class="smartphone"><h1>Smartphone</h1></div>
     <div class="landscape"><h1>Landscape</h1></div>
-    <div class="height"><h1>Height</h1></div>>
+    <div class="height"><h1>Height</h1></div>
 </body>
 </html>
