Responsive Flexbox Layout

--- a/Modern_HTML_CSS_Traversy/CSS/Responsive_Flexbox/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Responsive_Flexbox/index.html
@@ -11,19 +11,21 @@
     </header>
     <nav>
         <ul>
-            <li>Home</li>
-            <li>About</li>
-            <li>Services</li>
-            <li>Contact</li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li class="last-list-item"><a href="#">Contact</a></li>
         </ul>
     </nav>
+    <main class="main">
+        <section>
+            <h2>Lorem, ipsum dolor.</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum alias aperiam laudantium, voluptates iure rem eos mollitia sint quia cum porro totam officia! Sequi nesciunt earum totam aperiam cupiditate ab illum recusandae vero amet nulla omnis, ipsam obcaecati. Minima earum, veniam officia ea culpa maxime ipsam alias neque itaque nisi.</p>
+        </section>
+    </main>
     <div>
         <div>
-            <h3>Lorem, ipsum dolor.</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum alias aperiam laudantium, voluptates iure rem eos mollitia sint quia cum porro totam officia! Sequi nesciunt earum totam aperiam cupiditate ab illum recusandae vero amet nulla omnis, ipsam obcaecati. Minima earum, veniam officia ea culpa maxime ipsam alias neque itaque nisi.</p>
-        </div>
-        <div>
-            
+
         </div>
     </div>
 </body>
