--- a/Modern_HTML_CSS_Traversy/CSS/Responsive_Flexbox/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Responsive_Flexbox/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles2.css" />
     <title>HTML & CSS Sandbox</title>
   </head>
   <body>
