--- a/Modern_HTML_CSS_Traversy/CSS/Container_Queries/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Container_Queries/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
+<!-- <body>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, officia iure at quidem eligendi provident earum expedita nihil? Animi, eum!</p>
-</body>
+</body> -->
 </html>
