--- a/Modern_HTML_CSS_Traversy/CSS/Container_Units/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Container_Units/index.html
@@ -10,5 +10,10 @@
         <h2>My Card</h2>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas perspiciatis totam repudiandae a facere corporis odit dicta et sit accusantium?</p>
     </div>
+
+    <div class="card">
+        <h2>My Card</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas perspiciatis totam repudiandae a facere corporis odit dicta et sit accusantium?</p>
+    </div>
 </body>
 </html>
