--- a/Modern_HTML_CSS_Traversy/CSS/Container_Units/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Container_Units/index.html
@@ -3,17 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <div class="card">
-        <h2>My Card</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas perspiciatis totam repudiandae a facere corporis odit dicta et sit accusantium?</p>
-    </div>
-
-    <div class="card">
-        <h2>My Card</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas perspiciatis totam repudiandae a facere corporis odit dicta et sit accusantium?</p>
-    </div>
+    <main>
+        <div class="card">
+            <h2>My Card</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas perspiciatis totam repudiandae a facere corporis odit dicta et sit accusantium?</p>
+        </div>
+    
+        <div class="card">
+            <h2>My Card</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas perspiciatis totam repudiandae a facere corporis odit dicta et sit accusantium?</p>
+        </div>
+    </main>
 </body>
 </html>
