--- a/Modern_HTML_CSS_Traversy/CSS/Container_Units/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Container_Units/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <main>
-        <div class="card">
+        <div class="card card-1">
             <h2>My Card</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas perspiciatis totam repudiandae a facere corporis odit dicta et sit accusantium?</p>
         </div>
     
-        <div class="card">
+        <div class="card card-2">
             <h2>My Card</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas perspiciatis totam repudiandae a facere corporis odit dicta et sit accusantium?</p>
         </div>
