Landing Form Bono Mini-Project

--- a/Modern_HTML_CSS_Traversy/CSS/Landing_Form_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Landing_Form_Project/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="header">
+        <header class="header">
             <a href="index.html">
                 <img src="images/logo.svg" alt="" class="logo">
             </a>
@@ -24,7 +24,7 @@
                     <i class="fa-brands fa-twitter"></i>
                 </a>
             </div>
-        </div>
+        </header>
     </div>
 </body>
 </html>
