--- a/Modern_HTML_CSS_Traversy/CSS/Landing_Form_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Landing_Form_Project/index.html
@@ -25,6 +25,34 @@
                 </a>
             </div>
         </header>
+        <main class="main-content">
+            <form>
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" name="name" id="name" required />
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="text" name="email" id="email" required />
+                </div>
+                <div class="form-group">
+                    <label for="message">Message</label>
+                    <textarea name="message" id="message"></textarea>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn">Submit</button>
+                </div>
+            </form>
+            <div class="text-container">
+                <h1>Coming Soon For Every Developer</h1>
+                <p>
+                    Our new Bono web app will change the way you think about content
+                    management and will allow you to forcus on what's really
+                    important.
+                    Use the contact form to send us your thoughts
+                </p>
+            </div>
+        </main>
     </div>
 </body>
 </html>
