Custom CSS Properties

--- a/Modern_HTML_CSS_Traversy/CSS/More CSS Features/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/More CSS Features/index.html
@@ -9,6 +9,22 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>HTML & CSS Sandbox - Custom Properties</h1>
+    <header>
+        <h1>Custom Properties</h1>
+    </header>
+    <div class="container">
+        <div class="box box-1">
+            <h3>Lorem, ipsum dolor.</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis voluptate iusto doloremque laboriosam expedita vero nesciunt, quos dolores magnam recusandae!</p>
+        </div>
+        <div class="box box-2">
+            <h3>Lorem, ipsum dolor.</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis voluptate iusto doloremque laboriosam expedita vero nesciunt, quos dolores magnam recusandae!</p>
+        </div>
+        <div class="box box-3">
+            <h3>Lorem, ipsum dolor.</h3>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis voluptate iusto doloremque laboriosam expedita vero nesciunt, quos dolores magnam recusandae!</p>
+        </div>
+    </div>
 </body>
 </html>
