--- a/Modern_HTML_CSS_Traversy/CSS/More CSS Features/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/More CSS Features/index.html
@@ -13,7 +13,7 @@
     <header>
         <h1>Custom Properties</h1>
     </header>
-    <div class="container">
+    <div class="container container-lg">
         <div class="box box-1">
             <h3>Lorem, ipsum dolor.</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis voluptate iusto doloremque laboriosam expedita vero nesciunt, quos dolores magnam recusandae!</p>
