Custom CSS Properties

--- a/Modern_HTML_CSS_Traversy/CSS/More CSS Features/Vendor Prefixes/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/More CSS Features/Vendor Prefixes/index.html
@@ -10,6 +10,31 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>HTML & CSS Sandbox - Smooth Scroll Project</h1>
+    <header class="header">
+        <nav class="menu">
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#project-1">Project 1</a></li>
+                <li><a href="#project-2">Project 2</a></li>
+                <li><a href="#project-3">Project 3</a></li>
+                <li><a href="#project-4">Project 4</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main class="container">
+        <section class="section" id="home">
+            <h2>Welcome</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis natus quis, laudantium repudiandae distinctio quos illo consequatur molestiae itaque accusantium repellat vero perferendis? Sunt ut dolores optio reprehenderit impedit tempore?
+            </p>
+        </section>
+
+        <!-- Project 1 -->
+         <section class="section" id="project-1">
+            <h2>Project 1</h2>
+            <img src="./images/project1.jpg" alt="" />
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit sed voluptatem quos ipsam perspiciatis! Excepturi, iste beatae ratione rerum reprehenderit pariatur, recusandae totam est voluptates natus cum sapiente obcaecati repellendus!</p>
+         </section>
+    </main>
 </body>
 </html>
