Custom CSS Properties

--- a/Modern_HTML_CSS_Traversy/CSS/More CSS Features/Vendor Prefixes/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/More CSS Features/Vendor Prefixes/index.html
@@ -33,7 +33,45 @@
          <section class="section" id="project-1">
             <h2>Project 1</h2>
             <img src="./images/project1.jpg" alt="" />
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit sed voluptatem quos ipsam perspiciatis! Excepturi, iste beatae ratione rerum reprehenderit pariatur, recusandae totam est voluptates natus cum sapiente obcaecati repellendus!</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit sed voluptatem quos ipsam perspiciatis! Excepturi, iste beatae ratione rerum reprehenderit pariatur, recusandae totam est voluptates natus cum sapiente obcaecati repellendus!
+            </p>
+
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id numquam facere, voluptatem quos debitis voluptas harum modi perspiciatis ab officia iste deserunt incidunt soluta laboriosam reiciendis, repudiandae doloribus magni nemo?
+            </p>
+         </section>
+
+         <!-- Project 2 -->
+         <section class="section" id="project-2">
+            <h2>Project 2</h2>
+            <img src="./images/project2.jpg" alt="" />
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit sed voluptatem quos ipsam perspiciatis! Excepturi, iste beatae ratione rerum reprehenderit pariatur, recusandae totam est voluptates natus cum sapiente obcaecati repellendus!
+            </p>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id numquam facere, voluptatem quos debitis voluptas harum modi perspiciatis ab officia iste deserunt incidunt soluta laboriosam reiciendis, repudiandae doloribus magni nemo?
+            </p>
+         </section>
+
+         <!-- Project 3 -->
+         <section class="section" id="project-3">
+            <h2>Project 3</h2>
+            <img src="./images/project3.jpg" alt="" />
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit sed voluptatem quos ipsam perspiciatis! Excepturi, iste beatae ratione rerum reprehenderit pariatur, recusandae totam est voluptates natus cum sapiente obcaecati repellendus!
+            </p>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id numquam facere, voluptatem quos debitis voluptas harum modi perspiciatis ab officia iste deserunt incidunt soluta laboriosam reiciendis, repudiandae doloribus magni nemo?
+            </p>
+         </section>
+
+         <!-- Project 4 -->
+         <section class="section" id="project-4">
+            <h2>Project 4</h2>
+            <img src="./images/project4.jpg" alt="" />
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugit sed voluptatem quos ipsam perspiciatis! Excepturi, iste beatae ratione rerum reprehenderit pariatur, recusandae totam est voluptates natus cum sapiente obcaecati repellendus!
+            </p>
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id numquam facere, voluptatem quos debitis voluptas harum modi perspiciatis ab officia iste deserunt incidunt soluta laboriosam reiciendis, repudiandae doloribus magni nemo?
+            </p>
          </section>
     </main>
 </body>
