--- a/Modern_HTML_CSS_Traversy/CSS/More CSS Features/Vendor Prefixes/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/More CSS Features/Vendor Prefixes/index.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="header">
+    <header class="header tranparent">
         <nav class="menu">
             <ul>
                 <li><a href="#home">Home</a></li>
