Various CSS Features with JavaScript

--- a/Modern_HTML_CSS_Traversy/CSS/More CSS Features/Vendor Prefixes/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/More CSS Features/Vendor Prefixes/index.html
@@ -7,10 +7,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <!-- C:\Users\ENVY_02142019\Documents\HTML_CSS_JS\Modern_HTML_CSS_Traversy\modern-html-css-course-files-main\modern-html-css-course-files-main\html-sandbox-starter\08-various-css-features\04-sticky-navbar -->
     <title>Document</title>
 </head>
 <body>
-    <header class="header tranparent">
+    <header class="header">
         <nav class="menu">
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -74,5 +75,6 @@
             </p>
          </section>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
