Lumina-creative Web Project

--- a/Modern_HTML_CSS_Traversy/CSS/Ch11_LuminaWebProject/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch11_LuminaWebProject/index.html
@@ -22,5 +22,14 @@
             </ul>
         </div>
     </header>
+    <section class="hero">
+        <div class="container container-sm">
+            <h2>
+                <span class="bg-primary">Passionate
+                </span> creatives crafting distinct projects,
+                driven by <span class="bg-primary">innovation</span>
+            </h2>
+        </div>
+    </section>
 </body>
 </html>
