--- a/Modern_HTML_CSS_Traversy/CSS/Ch11_LuminaWebProject/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch11_LuminaWebProject/index.html
@@ -31,5 +31,55 @@
             </h2>
         </div>
     </section>
+
+    <section class="gallery">
+        <div class="container container-lg gallery-flex">
+            <div class="gallery-item">
+                <a href="images/image1.jpg">
+                    <img src="images/portfolio1.jpg" alt="Porfolio Item1">
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="images/image2.jpg">
+                    <img src="images/portfolio2.jpg" alt="Porfolio Item1">
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="images/image3.jpg">
+                    <img src="images/portfolio3.jpg" alt="Porfolio Item1">
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="images/image4.jpg">
+                    <img src="images/portfolio4.jpg" alt="Porfolio Item1">
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="images/image5.jpg">
+                    <img src="images/portfolio5.jpg" alt="Porfolio Item1">
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="images/image6.jpg">
+                    <img src="images/portfolio6.jpg" alt="Porfolio Item1">
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="images/image8.jpg">
+                    <img src="images/portfolio8.jpg" alt="Porfolio Item1">
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="images/image9.jpg">
+                    <img src="images/portfolio9.jpg" alt="Porfolio Item1">
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="images/image8.jpg">
+                    <img src="images/portfolio8.jpg" alt="Porfolio Item1">
+                </a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
