Lumina-creative Web Project

--- a/Modern_HTML_CSS_Traversy/CSS/Ch11_LuminaWebProject/about.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch11_LuminaWebProject/about.html
@@ -25,10 +25,29 @@
     <section class="hero">
         <div class="container container-sm">
             <h2>
-                <span class="bg-primary">Passionate
-                </span> creatives crafting distinct projects,
-                driven by <span class="bg-primary">innovation</span>
+                <span class="bg-primary">Inspired
+                </span> minds, shaping exceptional projects fueled by <span class="bg-primary">ingenuity</span>
             </h2>
+        </div>
+    </section>
+
+    <section class="services">
+        <div class="container">
+            <h2 class="section-heading">Our Services</h2>
+            <div class="services-flex">
+                <div class="service-item">
+                    <h4>Photography</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam assumenda sit minima laboriosam sunt porro numquam! At repellendus voluptate animi.</p>
+                </div>
+                <div class="service-item">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam assumenda sit minima laboriosam sunt porro numquam! At repellendus voluptate animi.</p>
+                </div>
+                <div class="service-item">
+                    <h4>Graphic Design</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam assumenda sit minima laboriosam sunt porro numquam! At repellendus voluptate animi.</p>
+                </div>
+            </div>
         </div>
     </section>
 
