--- a/Modern_HTML_CSS_Traversy/CSS/Ch11_LuminaWebProject/about.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch11_LuminaWebProject/about.html
@@ -51,6 +51,30 @@
         </div>
     </section>
 
+    <section class="team">
+        <div class="container container-lg">
+            <h2 class="section-heading">Our Team</h2>
+            <div class="team-flex">
+                <div class="team-item">
+                    <img src="images/team1.jpg" alt="Team Member">
+                    <h4>Kevin Samson</h4>
+                    <p>Founder</p>
+                </div>
+                <div class="team-item">
+                    <img src="images/team2.jpg" alt="Team Member">
+                    <h4>Rebecca Williams</h4>
+                    <p>Designer</p>
+
+                </div>
+                <div class="team-item">
+                    <img src="images/team3.jpg" alt="Team Member">
+                    <h4>Ben Markson</h4>
+                    <p>Designer/Developer</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <footer class="footer">
         <div class="container footer-flex">
             <img src="images/logo.png" alt="Lunima Creative">
