--- a/Modern_HTML_CSS_Traversy/CSS/Ch11_LuminaWebProject/about.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch11_LuminaWebProject/about.html
@@ -31,7 +31,7 @@
         </div>
     </section>
 
-    <section class="services">
+    <section class="services bg-dark">
         <div class="container">
             <h2 class="section-heading">Our Services</h2>
             <div class="services-flex">
@@ -79,7 +79,7 @@
         <div class="container footer-flex">
             <img src="images/logo.png" alt="Lunima Creative">
 
-            <div class="contact">
+            <div>
                 <h4>Contact Us</h4>
                 <ul>
                     <li>(555) 555-5555</li>
@@ -88,7 +88,7 @@
                 </ul>
             </div>
 
-            <div class="social">
+            <div>
                 <h4>Follow Us</h4>
                 <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
                 <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
