Lumina-creative Web Project

--- a/Modern_HTML_CSS_Traversy/CSS/Ch11_LuminaWebProject/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch11_LuminaWebProject/index.html
@@ -16,7 +16,7 @@
         <div class="container header-flex">
             <img src="images/logo.png" alt="Lunima Creative" class="logo" />
             <ul class="main-menu">
-                <li><a href="/" class="current">Home</a></li>
+                <li><a href="#" class="current">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
