--- a/Modern_HTML_CSS_Traversy/CSS/Ch11_LuminaWebProject/about.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch11_LuminaWebProject/about.html
@@ -16,7 +16,7 @@
         <div class="container header-flex">
             <img src="images/logo.png" alt="Lunima Creative" class="logo" />
             <ul class="main-menu">
-                <li><a href="/" >Home</a></li>
+                <li><a href="index.html" >Home</a></li>
                 <li><a class="current" href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
