--- a/Modern_HTML_CSS_Traversy/CSS/Ch11_LuminaWebProject/contact.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch11_LuminaWebProject/contact.html
@@ -16,7 +16,7 @@
         <div class="container header-flex">
             <img src="images/logo.png" alt="Lunima Creative" class="logo" />
             <ul class="main-menu">
-                <li><a href="/" >Home</a></li>
+                <li><a href="index.html" >Home</a></li>
                 <li><a  href="about.html">About</a></li>
                 <li><a class="current" href="contact.html">Contact</a></li>
             </ul>
@@ -40,11 +40,38 @@
             <form>
                 <div class="form-group">
                     <label for="first-name" class="visually-hidden">First Name</label>
-                    <input type="text" id="first-name" name="first-name" placeholder="First Name">
+                    <input 
+                    type="text" 
+                    id="first-name" 
+                    name="first-name" 
+                    placeholder="First Name">
                 </div>
                 <div class="form-group">
                     <label for="first-name" class="visually-hidden">First Name</label>
-                    <input type="text" id="first-name" name="first-name" placeholder="First Name">
+                    <input 
+                    type="text" 
+                    id="first-name" 
+                    name="first-name" 
+                    placeholder="First Name">
+                </div>
+                <div class="form-group">
+                    <label for="email" class="visually-hidden">Email Address</label>
+                    <input 
+                    type="email" 
+                    id="email" 
+                    name="email" 
+                    placeholder="Email Address">
+                </div>
+                <div class="form-group">
+                    <label for="message" class="visually-hidden">Message</label>
+                    <textarea 
+                    type="email" 
+                    id="email" 
+                    name="email" 
+                    placeholder="Message"></textarea>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn">Send Message</button>
                 </div>
             </form>
         </div>
