--- a/Modern_HTML_CSS_Traversy/CSS/Ch11_LuminaWebProject/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch11_LuminaWebProject/index.html
@@ -36,48 +36,48 @@
     <section class="gallery">
         <div class="container container-lg gallery-flex">
             <div class="gallery-item">
-                <a href="images/image1.jpg">
+                <a href="images/image1.jpg" data-lightbox="image-1" data-title="Image 1">
                     <img src="images/portfolio1.jpg" alt="Porfolio Item1">
                 </a>
             </div>
             <div class="gallery-item">
-                <a href="images/image2.jpg">
+                <a href="images/image2.jpg" data-lightbox="image-2" data-title="Image 2">
                     <img src="images/portfolio2.jpg" alt="Porfolio Item1">
                 </a>
             </div>
             <div class="gallery-item">
-                <a href="images/image3.jpg">
+                <a href="images/image3.jpg" data-lightbox="image-3" data-title="Image 3">
                     <img src="images/portfolio3.jpg" alt="Porfolio Item1">
                 </a>
             </div>
             <div class="gallery-item">
-                <a href="images/image4.jpg">
+                <a href="images/image4.jpg" data-lightbox="image-4" data-title="Image 4">
                     <img src="images/portfolio4.jpg" alt="Porfolio Item1">
                 </a>
             </div>
             <div class="gallery-item">
-                <a href="images/image5.jpg">
+                <a href="images/image5.jpg" data-lightbox="image-5" data-title="Image 5">
                     <img src="images/portfolio5.jpg" alt="Porfolio Item1">
                 </a>
             </div>
             <div class="gallery-item">
-                <a href="images/image6.jpg">
+                <a href="images/image6.jpg" data-lightbox="image-6" data-title="Image 6">
                     <img src="images/portfolio6.jpg" alt="Porfolio Item1">
                 </a>
             </div>
             <div class="gallery-item">
-                <a href="images/image8.jpg">
+                <a href="images/image7.jpg" data-lightbox="image-7" data-title="Image 7">
+                    <img src="images/portfolio7.jpg" alt="Porfolio Item1">
+                </a>
+            </div>
+            <div class="gallery-item">
+                <a href="images/image8.jpg" data-lightbox="image-8" data-title="Image 8">
                     <img src="images/portfolio8.jpg" alt="Porfolio Item1">
                 </a>
             </div>
             <div class="gallery-item">
-                <a href="images/image9.jpg">
+                <a href="images/image9.jpg" data-lightbox="image-9" data-title="Image 9">
                     <img src="images/portfolio9.jpg" alt="Porfolio Item1">
-                </a>
-            </div>
-            <div class="gallery-item">
-                <a href="images/image8.jpg">
-                    <img src="images/portfolio8.jpg" alt="Porfolio Item1">
                 </a>
             </div>
         </div>
@@ -106,6 +106,7 @@
             </div>
         </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.5/js/lightbox.min.js" integrity="sha512-KbRFbjA5bwNan6DvPl1ODUolvTTZ/vckssnFhka5cG80JVa5zSlRPCr055xSgU/q6oMIGhZWLhcbgIC0fyw3RQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 </html>
