--- a/Modern_HTML_CSS_Traversy/CSS/Ch13_Accessibility/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch13_Accessibility/index.html
@@ -7,9 +7,26 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="CSS/style.css" />
     
-    <title>Lunima Creative</title>
+    <title>Accessibility - Screen Reader Testing</title>
 </head>
 <body>
-    
+    <div class="header">
+        <a href="/" class="logo">My Websites</a>
+        <div class="nav">
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/contact">contact</a></li>
+                <li>
+                    <a href="/"><i class="fa-brands fa-facebook"></i>
+                    </a>
+                </li>
+            </ul>
+            <div class="search">
+                <input type="text">
+                <button>Search</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
