--- a/Modern_HTML_CSS_Traversy/CSS/Ch13_Accessibility/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch13_Accessibility/index.html
@@ -10,15 +10,15 @@
     <title>Accessibility - Screen Reader Testing</title>
 </head>
 <body>
-    <div class="header">
-        <a href="/" class="logo">My Websites</a>
+    <div class="header" role="banner">
+        <a href="/" class="logo" aria-label="Logo and link to homepage">My Websites</a>
         <div class="nav">
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/contact">contact</a></li>
                 <li>
-                    <a href="/"><i class="fa-brands fa-facebook"></i>
+                    <a href="/" aria-label="Follow Us On Facebook"><i class="fa-brands fa-facebook"></i>
                     </a>
                 </li>
             </ul>
