--- a/Modern_HTML_CSS_Traversy/CSS/Ch13_Accessibility/role.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch13_Accessibility/role.html
@@ -27,7 +27,16 @@
     tabindex="0"
     /> -->
 
-        <!-- Listbox & Option -->
+    <!-- Aria Label -->
+      <a href="#menu" aria-label="Open Menu" role="button">
+        <svg viewBox="0 0 100 80" width="40" height="40" fill="black">
+            <rect width="100" height="20"></rect>
+            <rect y="30" width="100" height="20"></rect>
+            <rect y="60" width="100" height="20"></rect>
+        </svg>
+      </a>
+
+        <!-- Listbox & Option and Aria Labelleby -->
     <h2>Available Fruit</h2>
     <ul role="listbox" aria-label="Available Fruit">
         <li role="option">Apple</li>
@@ -36,8 +45,18 @@
         <li role="option">Cherry</li>
     </ul>
 
+    <!-- Aria Hidden -->
+     <p aria-hidden="true">This content is hidden.</p>
+     <p aria-hidden="false">This content is not hidden</p>
+
     <!-- Region -->
      <div role="region"></div>
+
+     <div role="alert">
+        <p>Post Saved</p>
+     </div>
+
+     
 
     <script>
         document.querySelector('img').addEventListener('click', function () {
