--- a/Modern_HTML_CSS_Traversy/CSS/Ch13_Accessibility/role.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch13_Accessibility/role.html
@@ -49,14 +49,21 @@
      <p aria-hidden="true">This content is hidden.</p>
      <p aria-hidden="false">This content is not hidden</p>
 
-    <!-- Region -->
+    <!-- Region
      <div role="region"></div>
 
      <div role="alert">
         <p>Post Saved</p>
-     </div>
+     </div> -->
 
-     
+     <div class="accordion">
+        <div class="accordion-header" id="accordion-heading">
+            Section 1: Introduction
+        </div>
+        <div class="accordion-content" id="accordion-content">
+            <p>This section provides an introduction to the topic.</p>
+        </div>
+     </div>
 
     <script>
         document.querySelector('img').addEventListener('click', function () {
