--- a/Modern_HTML_CSS_Traversy/CSS/Ch13_Accessibility/role.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch13_Accessibility/role.html
@@ -65,10 +65,11 @@
         </div>
      </div>
 
-    <script>
+    <!-- <script>
         document.querySelector('img').addEventListener('click', function () {
             alert('Image Clicked')
         })
-    </script>
+    </script> -->
+    <script src="script.js"></script>
 </body>
 </html>
