--- a/Modern_HTML_CSS_Traversy/CSS/Ch13_Accessibility/aria.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch13_Accessibility/aria.html
@@ -13,9 +13,9 @@
         <div class="accordion-header" id="accordion-heading">
             Section 1: Introduction
         </div>
-        <div class="accordion-content" id="accordion-content">
+        <!-- <div class="accordion-content" id="accordion-content">
             <p>This section provides an introduction to the topic</p>
-        </div>
+        </div> -->
     </div>
     
     <script src="script.js"></script>
