--- a/Modern_HTML_CSS_Traversy/CSS/Ch13_Accessibility/aria.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch13_Accessibility/aria.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style1.css">
     <title>Document</title>
 </head>
 <body>
@@ -13,9 +13,9 @@
         <div class="accordion-header" id="accordion-heading">
             Section 1: Introduction
         </div>
-        <!-- <div class="accordion-content" id="accordion-content">
+        <div class="accordion-content" id="accordion-content">
             <p>This section provides an introduction to the topic</p>
-        </div> -->
+        </div>
     </div>
     
     <script src="script.js"></script>
