--- a/Modern_HTML_CSS_Traversy/CSS/Ch10_CSS Features/Nesting/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch10_CSS Features/Nesting/index.html
@@ -10,10 +10,10 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="hero">
+    <!-- <header class="hero">
         <h1>Welcome Aboard</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, animi! <a href="#main">Read More</a></p>
-    </header>
+    </header> -->
 
     <main id="main">
         <div class="container">
