--- a/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/index.html
@@ -6,9 +6,41 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>HTML Attribute Selectors</title>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="https://www.traversymedia.com">Traversy Media</a></li>
+        </ul>
+    </nav>
+    <div class="container">
+        <form>
+            <div class="form-group">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required />
+            </div>
+            <div class="form-group">
+                <label for="name">Email:</label>
+                <input type="email" id="email" name="email" required />
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" maxlength="8" />
+            </div>
+            <div class="form-group">
+                <label for="message">Message:</label>
+                <textarea type="message" id="message" name="name" required></textarea>
+            </div>
+            <div class="form-group">
+                <button type="submit">Submit</button>
+            </div>
+            <div class="form-group">
+                <button type="submit">Click Me</button>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
