Attribute Selectors and Pseudo Classes

--- a/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/index.html
@@ -39,10 +39,9 @@
             <div class="form-group">
                 <button type="submit">Submit</button>
             </div>
-            <div class="form-group">
-                <button type="submit">Click Me</button>
-            </div>
         </form>
+
+        <button>Click Me</button>
     </div>
 </body>
 </html>
