--- a/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/child_combinators.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/child_combinators.html
@@ -25,7 +25,16 @@
                     <li><p>Item Three Three</p></li>
                 </ul>
             </li>
+            <li>Item Four</li>
+            <li>Item Five</li>
         </ul>
+        <div>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eum, est.
+            </p>
+            <a href="#">Link 2</a>
+        </div>
+        <a href="#">Link 3</a>
     </div>
 </body>
 </html>
