Child and Sibling Combinators

--- a/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/pseudo.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/pseudo.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="pseudo.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="container">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat rerum non dolores, quod enim tempore architecto nisi, provident ipsum blanditiis deleniti! Magnam veniam recusandae ea placeat beatae odit architecto, modi numquam explicabo fugit eligendi distinctio illum? Veritatis sapiente reprehenderit iure.</p>
+
+        <form>
+            <label for="email">Email</label>
+            <input 
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Enter Email"
+            />
+            <input type="file" name="file" id="file" />
+        </form>
+
+        <ul>
+            <li>Item One</li>
+            <li>Item Two</li>
+            <li>Item Three</li>
+            <li>Item Four</li>
+        </ul>
+    </div>
 </body>
 </html>
