--- a/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/child_classes.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/child_classes.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="child_classes.css">
     <title>Pseudo Classes - first-child, last-child, & nth-child</title>
 </head>
 <body>
