overlay project with ::before pseudo elements

--- a/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/overlay_project.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/overlay_project.html
@@ -10,6 +10,13 @@
     <title>HTML & CSS Sandbox - Image Overlay</title>
 </head>
 <body>
-    
+    <section class="hero">
+        <div class="container">
+            <h1>The Landscape Of Your Dreams Awaits</h1>
+            <p>Embark on a journey to explore new horizons, uncover hidden 
+                treasures, and embrace the beary of the unknown</p>
+            <a href="#" class="btn">Learn More</a>
+        </div>
+    </section>
 </body>
 </html>
