--- a/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/is_where_has.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/is_where_has.html
@@ -13,6 +13,11 @@
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique, veniam!
             <a href="#">elit</a>. Tempora, alias.
         </p>
+
+        <h1><span>Goodbye</span> World</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam, blanditiis.
+        </p>
     </div>
 </body>
 </html>
