--- a/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/styling_forms.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch14_Pseudo_Classes/styling_forms.html
@@ -42,6 +42,9 @@
                     required
                  ></textarea>
             </div>
+            <div class="form-group">
+                <input type="submit" value="Submit">
+            </div>
         </form>
     </div>
 </body>
