--- a/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid.html
@@ -3,11 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="grid.css">
     <title>Document</title>
 </head>
 <body>
     <h1>HTML & CSS Sandbox - Grid Columns</h1>
-    <div class="container item-grid"></div>
+    <div class="container item-grid">
+        <!-- .item.item-${Item $}*6 -->
+         <div class="item item-1">Item 1</div>
+         <div class="item item-2">Item 2</div>
+         <div class="item item-3">Item 3</div>
+         <div class="item item-4">Item 4</div>
+         <div class="item item-5">Item 5</div>
+         <div class="item item-6">Item 6</div>
+         <div class="item item-7">Item 7</div>
+         <div class="item item-8">Item 8</div>
+         <div class="item item-9">Item 9</div>
+    </div>
 </body>
 </html>
