--- a/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_rows.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_rows.html
@@ -15,6 +15,7 @@
         <div class="item item-4">Item 4</div>
         <div class="item item-5">Item 5</div>
         <div class="item item-6">Item 6</div>
+        <div class="item item-7">Item 7</div>
     </div>
 </body>
 </html>
