--- a/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_challenge2.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_challenge2.html
@@ -12,6 +12,8 @@
         <nav>Nav</nav>
         <div class="search">Search</div>
         <main>Main Content</main>
+        <aside>Aside Content</aside>
+        <footer>Footer</footer>
     </div>
 </body>
 </html>
