add grid template area

--- a/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_template_area.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch15_CSS_Grid/grid_template_area.html
@@ -11,9 +11,9 @@
         <header>Header</header>
         <div class="searh">Search</div>
         <nav>Nav</nav>
-        <!-- <main>Main Contaent</main>
+        <main>Main Content</main>
         <aside>Aside Content</aside>
-        <footer>Footer</footer> -->
+        <footer>Footer</footer>
     </div>
 </body>
 </html>
