--- a/Modern_HTML_CSS_Traversy/CSS/Ch16_Transistions_Animations/Website Mini-Project/presentation_site.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch16_Transistions_Animations/Website Mini-Project/presentation_site.html
@@ -8,9 +8,55 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="presentation_site.css">
-    <title></title>
+    <title>Document</title>
 </head>
 <body>
-    
+    <h1>HTML & CSS Sandbox - Presentation Website</h1>
+    <!-- Page 1 -->
+     <section id="page-1" class="page">
+        <h1>Welcome To My Presentation</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum architecto maxime, sapiente eveniet harum iusto unde dolor provident ut aliquid omnis facilis nemo porro eius quam, sit magnam, quia ad minima? Accusantium sint aliquam nemo quia libero dolorum, maxime impedit soluta hic iusto earum minima! Ab vel iusto fugiat odio!</p>
+        <div>
+            <a href="#page-2" class="btn">Next Page <i class="fas fa-arrow-circle-down"></i></a>
+        </div>
+     </section>
+    <!-- Page 2 -->
+     <section id="page-2" class="page">
+        <h1>Page 2</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum architecto maxime, sapiente eveniet harum iusto unde dolor provident ut aliquid omnis facilis nemo porro eius quam, sit magnam, quia ad minima? Accusantium sint aliquam nemo quia libero dolorum, maxime impedit soluta hic iusto earum minima! Ab vel iusto fugiat odio!
+        </p>
+        <div>
+            <a href="#page-1" class="btn">
+                Prev Page <i class="fas fa-arrow-circle-down"></i>
+            </a>
+            <a href="#page-3" class="btn">
+                Next Page <i class="fas fa-arrow-circle-down"></i>3            </a>
+        </div>
+     </section>
+    <!-- Page 3 -->
+     <section id="page-3" class="page">
+        <h1>Page 3</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum architecto maxime, sapiente eveniet harum iusto unde dolor provident ut aliquid omnis facilis nemo porro eius quam, sit magnam, quia ad minima? Accusantium sint aliquam nemo quia libero dolorum, maxime impedit soluta hic iusto earum minima! Ab vel iusto fugiat odio!
+        </p>
+        <div>
+            <a href="#page-3" class="btn">
+                Prev Page <i class="fas fa-arrow-circle-down"></i>
+            </a>
+            <a href="#page-4" class="btn">
+                Prev Page <i class="fas fa-arrow-circle-down"></i>
+            </a>
+        </div>
+     </section>
+    <!-- Page 4 -->
+     <section id="page-4" class="page">
+        <h1>Page 4</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum architecto maxime, sapiente eveniet harum iusto unde dolor provident ut aliquid omnis facilis nemo porro eius quam, sit magnam, quia ad minima? Accusantium sint aliquam nemo quia libero dolorum, maxime impedit soluta hic iusto earum minima! Ab vel iusto fugiat odio!
+        </p>
+        <div>
+            <a href="#page-3" class="btn">
+                Prev Page <i class="fas fa-arrow-circle-down"></i>
+            </a>
+        </div>
+     </section>
 </body>
 </html>
