Add Presentation Website Mini-Project: CSS

--- a/Modern_HTML_CSS_Traversy/CSS/Ch16_Transistions_Animations/Website Mini-Project/presentation_site.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch16_Transistions_Animations/Website Mini-Project/presentation_site.html
@@ -30,23 +30,25 @@
                 Prev Page <i class="fas fa-arrow-circle-down"></i>
             </a>
             <a href="#page-3" class="btn">
-                Next Page <i class="fas fa-arrow-circle-down"></i>3            </a>
+                Next Page <i class="fas fa-arrow-circle-down"></i></a>
         </div>
      </section>
+
     <!-- Page 3 -->
      <section id="page-3" class="page">
         <h1>Page 3</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum architecto maxime, sapiente eveniet harum iusto unde dolor provident ut aliquid omnis facilis nemo porro eius quam, sit magnam, quia ad minima? Accusantium sint aliquam nemo quia libero dolorum, maxime impedit soluta hic iusto earum minima! Ab vel iusto fugiat odio!
         </p>
         <div>
-            <a href="#page-3" class="btn">
+            <a href="#page-2" class="btn">
                 Prev Page <i class="fas fa-arrow-circle-down"></i>
             </a>
             <a href="#page-4" class="btn">
-                Prev Page <i class="fas fa-arrow-circle-down"></i>
+                Next Page <i class="fas fa-arrow-circle-down"></i>
             </a>
         </div>
      </section>
+
     <!-- Page 4 -->
      <section id="page-4" class="page">
         <h1>Page 4</h1>
