--- a/Modern_HTML_CSS_Traversy/CSS/Ch16_Transistions_Animations/Website Mini-Project/presentation_site.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch16_Transistions_Animations/Website Mini-Project/presentation_site.html
@@ -11,7 +11,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>HTML & CSS Sandbox - Presentation Website</h1>
+    <!-- <h1>HTML & CSS Sandbox - Presentation Website</h1> -->
     <!-- Page 1 -->
      <section id="page-1" class="page">
         <h1>Welcome To My Presentation</h1>
@@ -26,8 +26,8 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum architecto maxime, sapiente eveniet harum iusto unde dolor provident ut aliquid omnis facilis nemo porro eius quam, sit magnam, quia ad minima? Accusantium sint aliquam nemo quia libero dolorum, maxime impedit soluta hic iusto earum minima! Ab vel iusto fugiat odio!
         </p>
         <div>
-            <a href="#page-1" class="btn">
-                Prev Page <i class="fas fa-arrow-circle-down"></i>
+            <a href="#page-1" class="btn btn-dark">
+                Prev Page <i class="fas fa-arrow-circle-up"></i>
             </a>
             <a href="#page-3" class="btn">
                 Next Page <i class="fas fa-arrow-circle-down"></i></a>
@@ -40,8 +40,8 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum architecto maxime, sapiente eveniet harum iusto unde dolor provident ut aliquid omnis facilis nemo porro eius quam, sit magnam, quia ad minima? Accusantium sint aliquam nemo quia libero dolorum, maxime impedit soluta hic iusto earum minima! Ab vel iusto fugiat odio!
         </p>
         <div>
-            <a href="#page-2" class="btn">
-                Prev Page <i class="fas fa-arrow-circle-down"></i>
+            <a href="#page-2" class="btn btn-dark">
+                Prev Page <i class="fas fa-arrow-circle-up"></i>
             </a>
             <a href="#page-4" class="btn">
                 Next Page <i class="fas fa-arrow-circle-down"></i>
@@ -56,7 +56,7 @@
         </p>
         <div>
             <a href="#page-3" class="btn">
-                Prev Page <i class="fas fa-arrow-circle-down"></i>
+                Prev Page <i class="fas fa-arrow-circle-up"></i>
             </a>
         </div>
      </section>
