Add Tutor website project

--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
@@ -11,6 +11,10 @@
     <title>Welcome To Tutor</title>
 </head>
 <body>
-    <h1>Tutor</h1>
+    <nav class="navbar">
+        <div class="navbar-flex container">
+            
+        </div>
+    </nav>
 </body>
 </html>
