--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
@@ -13,7 +13,40 @@
 <body>
     <nav class="navbar">
         <div class="navbar-flex container">
-            
+            <img src="images/logo.svg" alt="Tutor">
+            <div class="main-menu-items">
+                <ul class="main-menu-list">
+                    <li>
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#chapters">Chapters</a>
+                    </li>
+                    <li>
+                        <a href="#summary">Summary</a>
+                    </li>
+                    <li>
+                        <a href="#takeaways">TakeAways</a>
+                    </li>
+                    <li>
+                        <a href="#author">Author</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact</a>
+                    </li>
+                    <li>
+                        <a href="facebook.com" target="_blank">
+                            <i class="fa-brands fa-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="twitter.com" target="_blank">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
         </div>
     </nav>
 </body>
