Add background image

--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
@@ -89,6 +89,22 @@
             </div>
         </div>
     </nav>
+
+    <!-- Hero -->
+     <header class="hero">
+        <div class="container hero-flex">
+            <div class="hero-content">
+                <h1>Create Your Own Video Courses</h1>
+                <p>
+                    Dive deep into the world of creativity and learn to stunning
+                    videos that captivate and inspire.
+                </p>
+                <a href="#" class="btn">$29 Get Course</a>
+            </div>
+            <img src="images/header-course.png" alt="hero">
+        </div>
+     </header>
+
     <script src="js/script.js"></script>
 </body>
 </html>
