Add learn section

--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
@@ -126,6 +126,19 @@
       </svg>
      </header>
 
+     <!-- Learn Section -->
+      <section class="learn">
+        <div class="container">
+            <div class="section-header">
+                <h2>What will You Learn</h2>
+                <div class="heading-border"></div>
+                <p>Embark on a journey of learning with our comprehensive video courses.
+                    Discover the secrets of successful video creation and enhance 
+                    your skills.
+                </p>
+            </div>
+        </div>
+      </section>
     <script src="js/script.js"></script>
 </body>
 </html>
