Add learn topics img transistion and media query

--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
@@ -206,6 +206,21 @@
             </div>
         </div>
       </section>
+
+      <!-- Course Chapter Section -->
+      <section class="chapters section" id="chapters">
+        <div class="container">
+            <div class="section-header">
+                <h2>Main Course Chapters</h2>
+                <div class="heading-border"></div>
+                <p>
+                    Explore the core concepts and Techniques covered in our video course.
+                    Each chapter is designed to equip you with essential skills for 
+                    video creation.
+                </p>
+            </div>
+        </div>
+      </section>
     <script src="js/script.js"></script>
 </body>
 </html>
