Add cousre chapter section

--- a/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
+++ b/Modern_HTML_CSS_Traversy/CSS/Ch17_Tutor_Website_Project/index.html
@@ -219,6 +219,30 @@
                     video creation.
                 </p>
             </div>
+            <div class="card">
+                <img src="images/chapters-icon-1.svg" alt="chapter 1">
+                <h3>Setting Clear Objectives</h3>
+                <p>
+                    Learn how to define clear objectives and goals for your video 
+                    projects, ensuring focus and direction?
+                </p>
+            </div>
+            <div class="card">
+                <img src="images/chapters-icon-2.svg" alt="chapter 2">
+                <h3>Setting Clear Strategies</h3>
+                <p>
+                    Dive into effective content creation strategies that resonate with 
+                    your audience.
+                </p>
+            </div>
+            <div class="card">
+                <img src="images/chapters-icon-3.svg" alt="chapter 3">
+                <h3>Coding Essentials</h3>
+                <p>
+                    Explore the fundatmental of coding for video projects, including HTML,
+                    CSS, and JavaScript
+                </p>
+            </div>
         </div>
       </section>
     <script src="js/script.js"></script>
